--- a/app/src/main/res/layout/fragment_my_store_information.xml
+++ b/app/src/main/res/layout/fragment_my_store_information.xml
@@ -120,6 +120,7 @@
                     android:id="@+id/image_button_phone_number_store_information"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:visibility="gone"
                     android:layout_gravity="center_vertical|end"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
