--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -105,6 +105,7 @@
                 android:id="@+id/view_pager_profile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="50dp"
                 android:layout_below="@id/tab_layout_profile"
                 android:animateLayoutChanges="true" />
         </RelativeLayout>
