--- a/app/src/main/res/layout/recycler_rank_type_loyalty.xml
+++ b/app/src/main/res/layout/recycler_rank_type_loyalty.xml
@@ -10,13 +10,18 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/rectangle_stroke_blue">
+        android:background="@color/white_color">
 
         <ImageView
             android:id="@+id/recycler_rank_loyalty"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true" />
+
+        <RelativeLayout
+            android:id="@+id/recycler_relative_rank_type_loyalty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <ImageView
             android:id="@+id/recycler_rank_lock_loyalty"
