--- a/app/src/main/res/layout/fragment_tab_promo_request.xml
+++ b/app/src/main/res/layout/fragment_tab_promo_request.xml
@@ -1,25 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/background"
+    android:layout_marginBottom="50dp"
+    android:background="@color/white_color"
     tools:context=".ui.tabpromorequest.TabPromoRequest">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout_PromoRequest"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_title_tab_promo_request"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:tabSelectedTextColor="@color/abbey_palette"
-        app:tabTextColor="@color/boulder_palette"
-        android:background="@color/white_color" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/sniglet_font"
+        android:text="Kelola Promo"
+        android:textColor="@color/blackPalette"
+        android:textSize="25sp" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_promo_request"
+        android:layout_width="match_parent"
+        android:layout_below="@id/text_title_tab_promo_request"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:tabBackground="@color/white_color"
+        app:tabSelectedTextColor="@color/blackPalette"
+        app:tabTextAppearance="@style/MyCustomTabTextAppearance"
+        app:tabTextColor="@color/iron_palette" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager_TabPromo"
+        android:id="@+id/view_pager_promo_request"
+        android:layout_below="@id/tab_promo_request"
         android:layout_width="match_parent"
         android:overScrollMode="never"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_new_promo_request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/rectangle_rounded_stroke_blue"
+        android:orientation="horizontal"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="15dp"
+            android:background="@drawable/ic_plus_blue_circle" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/sniglet_font"
+            android:text="Buat Promo Baru"
+            android:textColor="@color/blue_palette" />
+    </LinearLayout>
+</RelativeLayout>
