--- a/app/src/main/res/layout/recycler_category.xml
+++ b/app/src/main/res/layout/recycler_category.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recycler_relative_category"
-    android:layout_width="80dp"
-    android:layout_height="100dp"
+    android:layout_width="90dp"
+    android:layout_height="110dp"
     android:layout_marginStart="20dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="20dp"
     android:background="@drawable/rectangle_rounded_stroke_blue"
     android:orientation="vertical">
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/recycler_img_category"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@id/recycler_name_category"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="10dp"
-        android:scaleType="centerCrop" />
+        android:layout_alignParentTop="true">
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/recycler_img_category"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/recycler_name_category"
