--- a/app/src/main/res/layout/fragment_promo_request.xml
+++ b/app/src/main/res/layout/fragment_promo_request.xml
@@ -68,12 +68,13 @@
                 android:backgroundTint="@color/blackPalette"
                 android:fontFamily="@font/sniglet_font"
                 android:hint="cth: Get Rp 50.000 Voucher Every Monday"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textNoSuggestions"
                 android:maxLines="2"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
+                android:textColor="@color/blackPalette"
                 android:textColorHint="@color/silver_palette"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -94,6 +95,7 @@
                 android:weightSum="2">
 
                 <LinearLayout
+                    android:id="@+id/linear_start_date_promo_request"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
@@ -130,6 +132,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/linear_end_date_promo_request"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -183,6 +186,21 @@
                 android:nestedScrollingEnabled="false" />
 
             <TextView
+                android:id="@+id/show_error_title_promo_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="5dp"
+                android:drawableStart="@drawable/ic_warning"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/dont_empty_this_edittext"
+                android:textColor="@color/blackPalette"
+                android:visibility="gone" />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -195,6 +213,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_payment_type_promo_request"
                 android:layout_width="match_parent"
+                android:layout_marginStart="20dp"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false" />
 
@@ -220,9 +239,26 @@
                 android:hint="cth: khusus untuk BCA Card JCB Black"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
+                android:inputType="text|textNoSuggestions"
+                android:enabled="false"
                 android:textColor="@color/blackPalette"
                 android:textColorHint="@color/silver_palette"
                 android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/show_error_checkbox_promo_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="5dp"
+                android:drawableStart="@drawable/ic_warning"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/dont_empty_this_edittext"
+                android:textColor="@color/blackPalette"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -248,12 +284,14 @@
             </LinearLayout>
 
             <RadioGroup
+                android:id="@+id/radio_group_location_promo_request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="5dp">
 
                 <RadioButton
+                    android:id="@+id/radio_button_all_promo_request"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:buttonTint="@color/blue_palette"
@@ -263,6 +301,7 @@
                     android:textSize="14sp" />
 
                 <RadioButton
+                    android:id="@+id/radio_button_specific_promo_request"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:layout_marginTop="5dp"
@@ -284,13 +323,30 @@
                 android:gravity="start|top"
                 android:hint="cth: \n1. Jalan Senopati Raya No. 60, Kebayoran Baru, Jakarta Selatan\n2. Jalan Taman Aries Raya No.3A, Puri Kembangan, Meruya, Jakarta Barat 11620 "
                 android:minLines="3"
+                android:enabled="false"
+                android:inputType="textMultiLine|textNoSuggestions"
                 android:paddingStart="10dp"
-                android:paddingTop="4dp"
+                android:paddingTop="5dp"
                 android:paddingEnd="10dp"
-                android:paddingBottom="4dp"
+                android:paddingBottom="5dp"
                 android:textColor="@color/blackPalette"
                 android:textColorHint="@color/silver_palette"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/show_error_location_promo_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="5dp"
+                android:drawableStart="@drawable/ic_warning"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/dont_empty_this_edittext"
+                android:textColor="@color/blackPalette"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/btn_next_promo_request"
