--- a/app/src/main/res/layout/fragment_tnc.xml
+++ b/app/src/main/res/layout/fragment_tnc.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_color"
-    tools:context=".ui.tabpromorequest.promorequest.TNCFragment">
+    tools:context=".ui.tabpromorequest.promorequest.tnc.TNCFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
