--- a/app/src/main/res/layout/fragment_tncpromo_request.xml
+++ b/app/src/main/res/layout/fragment_tncpromo_request.xml
@@ -1,77 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_color"
     tools:context=".ui.tabpromorequest.promorequest.tncpromorequest.TNCPromoRequestFragment">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Syarat &amp; Ketentuan Pengajuan Promo"
-            android:textAlignment="center"
-            android:textColor="@color/blackPalette"
-            android:textSize="25sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:text="A. DEFINISI"
-            android:textStyle="bold"
-            android:textColor="@color/blackPalette" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_term_condition_promo_request"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_margin="20dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:background="@color/blackPalette" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Syarat &amp; Ketentuan Pengajuan Promo"
+                android:textAlignment="center"
+                android:textColor="@color/blackPalette"
+                android:textSize="25sp" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_agreement_tnc_promo_request"
-            android:layout_margin="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="A. DEFINISI"
+                android:textColor="@color/blackPalette"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btn_send_tnc_promo_request"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="@drawable/background_reply"
-            android:fontFamily="@font/sniglet_font"
-            android:text="@string/send"
-            android:textAllCaps="false"
-            android:textColor="@color/white_color" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_term_condition_promo_request"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp" />
 
-        <Button
-            android:id="@+id/btn_cancel_tnc_promo_request"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/rectangle_rounded_stroke_blue"
-            android:fontFamily="@font/sniglet_font"
-            android:text="@string/cancel"
-            android:textAllCaps="false"
-            android:textColor="@color/blue_palette" />
-    </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@color/blackPalette" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_agreement_tnc_promo_request"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:layout_marginTop="5dp" />
+
+            <Button
+                android:id="@+id/btn_send_tnc_promo_request"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="@drawable/background_reply"
+                android:fontFamily="@font/sniglet_font"
+                android:text="@string/send"
+                android:textAllCaps="false"
+                android:textColor="@color/white_color" />
+
+            <Button
+                android:id="@+id/btn_cancel_tnc_promo_request"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/rectangle_rounded_stroke_blue"
+                android:fontFamily="@font/sniglet_font"
+                android:text="@string/cancel"
+                android:textAllCaps="false"
+                android:textColor="@color/blue_palette" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <include
+        android:id="@+id/custom_success_promo_request"
+        layout="@layout/custom_success_promo_request" />
+
+    <include
+        android:id="@+id/custom_loading_tnc_promo_request"
+        layout="@layout/custom_loading_black" />
+
+</android.support.design.widget.CoordinatorLayout>
