--- a/app/src/main/res/layout/fragment_promo_status.xml
+++ b/app/src/main/res/layout/fragment_promo_status.xml
@@ -8,5 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_promo_status"
         android:layout_width="match_parent"
+        android:overScrollMode="never"
+        android:nestedScrollingEnabled="false"
         android:layout_height="wrap_content" />
 </android.support.design.widget.CoordinatorLayout>
