--- a/app/src/main/res/layout/fragment_detail_promo_request.xml
+++ b/app/src/main/res/layout/fragment_detail_promo_request.xml
@@ -69,6 +69,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_correction_detail_promo_request"
                     android:layout_width="match_parent"
+                    android:overScrollMode="never"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:nestedScrollingEnabled="false" />
