--- a/app/src/main/res/layout/fragment_my_store_information.xml
+++ b/app/src/main/res/layout/fragment_my_store_information.xml
@@ -16,6 +16,7 @@
             android:orientation="vertical">
 
             <GridLayout
+                android:id="@+id/grid_my_information"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -254,6 +255,23 @@
                     android:background="@drawable/ic_check_rectangle_blue"
                     android:visibility="gone" />
             </GridLayout>
+
+            <TextView
+                android:id="@+id/text_hide_information_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/selection_rounded_blue"
+                android:fontFamily="@font/sniglet_font"
+                android:gravity="center"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="5dp"
+                android:text="Sembunyikan Profile"
+                android:textAllCaps="false"
+                android:textColor="@color/blue_palette" />
 
             <LinearLayout
                 android:layout_width="match_parent"
