--- a/app/src/main/res/layout/fragment_selected_thread.xml
+++ b/app/src/main/res/layout/fragment_selected_thread.xml
@@ -91,6 +91,7 @@
                     android:textSize="17sp" />
 
                 <LinearLayout
+                    android:id="@+id/linear_profile_selected_thread"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
