Adding minor feature

--- a/app/src/main/res/layout/custom_layout_empty.xml
+++ b/app/src/main/res/layout/custom_layout_empty.xml
@@ -5,8 +5,8 @@
     android:background="@color/white_color">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="350dp"
+        android:layout_width="300dp"
+        android:layout_height="250dp"
         android:layout_gravity="center"
         android:background="@drawable/ic_tap_to_fill" />
 </android.support.design.widget.CoordinatorLayout>
