--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,85 +2,144 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginBottom="50dp"
     android:layout_height="match_parent"
     android:background="@color/white_color"
     tools:context=".ui.mainforum.search.SearchFragment">
 
-    <RelativeLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
+        android:overScrollMode="never"
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/rl_dummy_00_search_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
+            android:layout_height="match_parent">
 
-            <ImageButton
-                android:id="@+id/image_button_back_search_fragment"
-                android:layout_width="40dp"
-                android:layout_height="30dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/ic_back" />
-
-            <EditText
-                android:id="@+id/edit_search_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_toStartOf="@id/ll_dummy_00_search_fragment"
-                android:layout_toEndOf="@id/image_button_back_search_fragment"
-                android:background="@drawable/rectangle_rounded_stroke_blue"
-                android:fontFamily="@font/sniglet_font"
-                android:hint="Cari disini"
-                android:maxLines="1"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:textColor="@color/blackPalette"
-                android:textColorHint="@color/iron_palette" />
-
-            <LinearLayout
-                android:id="@+id/ll_dummy_00_search_fragment"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/rl_dummy_00_search_fragment"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_alignParentTop="true">
 
                 <ImageButton
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/icon_love_fill" />
+                    android:id="@+id/image_button_back_search_fragment"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/ic_back" />
 
-                <TextView
+                <EditText
+                    android:id="@+id/edit_search_fragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_toStartOf="@id/ll_dummy_00_search_fragment"
+                    android:layout_toEndOf="@id/image_button_back_search_fragment"
+                    android:background="@drawable/rectangle_rounded_stroke_blue"
+                    android:fontFamily="@font/sniglet_font"
+                    android:hint="Cari disini"
+                    android:maxLines="1"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:textColor="@color/blackPalette"
+                    android:textColorHint="@color/iron_palette" />
+
+                <LinearLayout
+                    android:id="@+id/ll_dummy_00_search_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/icon_love_fill" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sniglet_font"
+                        android:text="@string/favorite"
+                        android:textColor="@color/blackPalette"
+                        android:textSize="10sp" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:layout_below="@id/rl_dummy_00_search_fragment"
+                android:background="@color/silver_palette" />
+
+            <LinearLayout
+                android:id="@+id/linear_result_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_dummy_00_search_fragment"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_category_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp" />
+
+                <TextView
+                    android:id="@+id/text_dummy_00_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/sniglet_font"
-                    android:text="@string/favorite"
+                    android:text="Forum"
                     android:textColor="@color/blackPalette"
-                    android:textSize="10sp" />
+                    android:textSize="20sp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_search_result_search_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never" />
+
+                <TextView
+                    android:id="@+id/text_dummy_01_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/sniglet_font"
+                    android:text="Merchant"
+                    android:textColor="@color/blackPalette"
+                    android:textSize="20sp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_profile_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never" />
             </LinearLayout>
-
         </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="6dp"
-            android:layout_below="@id/rl_dummy_00_search_fragment"
-            android:background="@color/silver_palette" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_search_result_search_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rl_dummy_00_search_fragment"
-            android:layout_marginTop="20dp" />
-    </RelativeLayout>
+    <include
+        android:id="@+id/custom_loading_search"
+        layout="@layout/custom_loading"
+        android:visibility="gone" />
 </android.support.design.widget.CoordinatorLayout>
