--- a/app/src/main/res/layout/fragment_main_forum.xml
+++ b/app/src/main/res/layout/fragment_main_forum.xml
@@ -16,99 +16,123 @@
         app:refreshColor="@color/blue_palette"
         app:refreshType="smartisan">
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/nested_scroll_main_forum"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="always"
-            android:scrollbars="vertical">
-
             <LinearLayout
                 android:id="@+id/parentll_main_forum"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/ll"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:weightSum="5">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="3"
+                        android:fontFamily="@font/sniglet_reguler"
+                        android:text="@string/merchant_forum_discussion"
+                        android:textAlignment="center"
+                        android:textColor="@color/blackPalette"
+                        android:textSize="20sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/image_button_favorite_main_forum"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:background="@drawable/icon_love_fill" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/sniglet_reguler"
+                            android:text="@string/favorite"
+                            android:textColor="@color/blackPalette"
+                            android:textSize="10sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/image_button_search_main_forum"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:background="@drawable/ic_search" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/sniglet_reguler"
+                            android:text="@string/search"
+                            android:textColor="@color/blackPalette"
+                            android:textSize="10sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="6dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/silver_palette" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_category_main_forum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/sniglet_reguler"
+                        android:text="Category: General"
+                        android:textColor="@color/blackPalette"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/text_change_category_main_forum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/rectangle_rounded_stroke_blue"
+                        android:paddingStart="10dp"
+                        android:paddingTop="3dp"
+                        android:paddingEnd="10dp"
+                        android:paddingBottom="3dp"
+                        android:text="change"
+                        android:textColor="@color/blue_palette" />
+                </LinearLayout>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <LinearLayout
-                        android:id="@+id/ll"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
-                        android:weightSum="5">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="3"
-                            android:fontFamily="@font/sniglet_reguler"
-                            android:text="@string/merchant_forum_discussion"
-                            android:textAlignment="center"
-                            android:textColor="@color/blackPalette"
-                            android:textSize="20sp" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:orientation="vertical">
-
-                            <ImageButton
-                                android:id="@+id/image_button_favorite_main_forum"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:background="@drawable/icon_love_fill" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/sniglet_reguler"
-                                android:text="@string/favorite"
-                                android:textColor="@color/blackPalette"
-                                android:textSize="10sp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:orientation="vertical">
-
-                            <ImageButton
-                                android:id="@+id/image_button_search_main_forum"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:background="@drawable/ic_search" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/sniglet_reguler"
-                                android:text="@string/search"
-                                android:textColor="@color/blackPalette"
-                                android:textSize="10sp" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
                         android:id="@+id/linear_showcase"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/ll"
                         android:orientation="vertical">
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="6dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/silver_palette" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -118,6 +142,7 @@
                             android:layout_marginBottom="5dp"
                             android:fontFamily="@font/sniglet_reguler"
                             android:text="Story"
+                            android:visibility="gone"
                             android:textColor="@color/blackPalette"
                             android:textSize="17sp" />
 
@@ -128,11 +153,13 @@
                             android:nestedScrollingEnabled="false"
                             android:overScrollMode="never"
                             android:paddingTop="5dp"
+                            android:visibility="gone"
                             android:paddingBottom="5dp" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="6dp"
+                            android:visibility="gone"
                             android:background="@color/silver_palette" />
 
                         <RelativeLayout
@@ -166,36 +193,6 @@
                                 android:visibility="gone" />
                         </RelativeLayout>
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/text_category_main_forum"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginStart="10dp"
-                                android:fontFamily="@font/sniglet_reguler"
-                                android:text="Category: General"
-                                android:textColor="@color/blackPalette"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:id="@+id/text_change_category_main_forum"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:background="@drawable/rectangle_rounded_stroke_blue"
-                                android:paddingStart="10dp"
-                                android:paddingTop="3dp"
-                                android:paddingEnd="10dp"
-                                android:paddingBottom="3dp"
-                                android:text="change"
-                                android:textColor="@color/blue_palette" />
-                        </LinearLayout>
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/recycler_thread_main_forum"
@@ -203,6 +200,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="50dp"
                             android:overScrollMode="always"
+                            android:nestedScrollingEnabled="true"
                             android:splitMotionEvents="true" />
 
                         <com.developers.coolprogressviews.ColorfulProgress
@@ -219,7 +217,6 @@
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
     </com.baoyz.widget.PullRefreshLayout>
 
     <android.support.v4.view.ViewPager
