--- a/app/src/main/res/layout/fragment_my_store_information.xml
+++ b/app/src/main/res/layout/fragment_my_store_information.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/relative_my_store_information"
     tools:context=".ui.profile.mystoreinformation.MyStoreInformation">
 
     <android.support.v4.widget.NestedScrollView
