--- a/app/src/main/res/layout/fragment_promo_request.xml
+++ b/app/src/main/res/layout/fragment_promo_request.xml
@@ -1,6 +1,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/coordinator_promo_request"
     android:layout_height="match_parent"
     android:background="@color/white_color"
     tools:context=".ui.tabpromorequest.promorequest.PromoRequestFragment">
