--- a/app/src/main/res/layout/fragment_tnc.xml
+++ b/app/src/main/res/layout/fragment_tnc.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coordinator_tnc"
     android:background="@color/white_color"
     tools:context=".ui.tabpromorequest.promorequest.tncrequest.TNCRequestFragment">
 
@@ -37,6 +38,7 @@
                 android:textSize="20sp" />
 
             <ImageButton
+                android:visibility="gone"
                 android:id="@+id/img_btn_info_tnc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:visibility="gone"
                 android:buttonTint="@color/blue_palette"
                 android:fontFamily="@font/sniglet_font"
                 android:text="Deskripsi S&amp;K Promo"
@@ -64,11 +67,10 @@
                 android:id="@+id/edit_text_description_tnc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/rectangle_rounded_stroke_blue"
-                android:enabled="false"
                 android:gravity="start|top"
                 android:hint="cth:\n1. Berlaku setiap hari\n2. Min. Transaksi Rp. 500.000 (Sebelum Tax &amp; Service)\n3. Dine-in only\n4. Berlaku untuk makanan dan minuman"
                 android:maxLength="500"
@@ -97,6 +99,7 @@
                 android:id="@+id/radio_button_attachment_tnc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginStart="20dp"
                 android:buttonTint="@color/blue_palette"
                 android:fontFamily="@font/sniglet_font"
@@ -105,6 +108,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
@@ -171,7 +175,7 @@
             android:fontFamily="@font/sniglet_font"
             android:text="lazy button"
             android:textAllCaps="false"
-            android:visibility="visible"
+            android:visibility="gone"
             android:textColor="@color/white_color" />
     </LinearLayout>
 
