--- a/app/src/main/res/layout/fragment_main_forum.xml
+++ b/app/src/main/res/layout/fragment_main_forum.xml
@@ -98,6 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -124,6 +125,7 @@
                         android:text="change"
                         android:textColor="@color/blue_palette" />
                 </LinearLayout>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -192,7 +194,6 @@
                                 android:background="@drawable/ic_add_box"
                                 android:visibility="gone" />
                         </RelativeLayout>
-
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/recycler_thread_main_forum"
